--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,14 @@ h1 {
   margin: auto;
 }
 
+.pizza-wrapper-content h3,
+.choice-wrapper h3,
+.choice-wrapper p,
+select,
+label {
+  margin-left: 0.5rem;
+}
+
 .pizza-wrapper h2,
 .choice-wrapper {
   text-align: left;
@@ -112,14 +120,8 @@ label h3 {
   font-size: 1.2rem;
 }
 
-label p {
-  font-size: 1rem;
-}
-
-option {
-  font-size: 1rem;
-}
-
+label p,
+option,
 input {
   font-size: 1rem;
 }
@@ -144,7 +146,8 @@ label {
 input,
 select,
 textarea {
-  margin: 5px 0 0;
+  /* margin: 5px 0 0; */
+  margin-left: 0.5rem;
   display: block;
   width: 60%;
   border: 2px solid rgba(0, 0, 0, 0.2);
@@ -217,4 +220,15 @@ button:disabled {
   width: 15px;
   display: inline-block;
   margin-right: 5px;
+}
+
+.submit-button {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  background-color: green;
+}
+
+.submit-button:hover {
+  filter: brightness(125%);
+  background-color: green;
 }
