--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,6 @@ h1 {
   margin: auto;
 }
 
-.pizza-wrapper-content h3,
 .choice-wrapper h3,
 .choice-wrapper p,
 select,
@@ -106,6 +105,8 @@ label {
 
 .choice-wrapper {
   background-color: rgba(176, 21, 21, 0.2);
+  width: 100%;
+  line-height: 0.5rem;
 }
 
 .pizzaPic {
@@ -131,8 +132,8 @@ input {
 form {
   display: flex;
   flex-direction: column;
-  width: 90%;
-  max-width: 300px;
+  width: 100%;
+  max-width: 600px;
   margin: 0 auto;
 }
 
@@ -146,8 +147,7 @@ label {
 input,
 select,
 textarea {
-  /* margin: 5px 0 0; */
-  margin-left: 0.5rem;
+  margin: 5px 0 0;
   display: block;
   width: 60%;
   border: 2px solid rgba(0, 0, 0, 0.2);
