name displays an error on screen if name doesn't validate.

--- a/src/App.css
+++ b/src/App.css
@@ -207,8 +207,10 @@ button:disabled {
 }
 
 .error {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: red;
+  text-align: left;
+  margin-left: 0.5rem;
 }
 
 .submit-button {
