--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-.App-header {
+body{
   display: flex;
-  background-color: blue;
-  min-height: 150vh;
+  background-color:lightblue;
+  min-height: 60vh;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
   font-size: 60px;
   color: white;
@@ -20,4 +21,10 @@ a {
   color:black;
   text-decoration: none;
   font-size: 30px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
