--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://i.pinimg.com/originals/b8/fd/27/b8fd27db0ef81f0e3be2c8d4d7bb25c0.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: yellowgreen;
 }
 
 code {
