--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+.links{
+  text-decoration: none;
+  color: white;
+  padding: 5px 20px;
+  border: 1px solid dodgerblue;
+  border-radius: 5px;
+  margin: 1rem;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.links:hover{
+  text-decoration: none;
+  color: black;
+  padding: 5px 20px;
+  border: 1px solid dodgerblue;
+  background-color: grey;
+  border-radius: 5px;
+  margin: 1rem;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.homePage-button{
+  padding: 5px 20px;
+  border: 1px solid dodgerblue;
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+  margin: 1rem;
+  font-weight: bold;
+}
+#mainImage{
+  width: 100%;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*
+
+img{
+  width:50%;
+}
+form{
+  border: 2px solid black;
+  width: 50%;
+  margin: 0 auto;
+  background-color: #F8F8FF;
+  /* display: flex;  
+}
+button{
+  margin: 1.5rem;
+}
+label {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  margin: 10px 5px;
+  font-size: 1rem;
+}
+.checkbox, .radio{
+  height: inherit;
+}
+input, select, textarea{
+  width: 60%;
+  height: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+#toppings, #sauce{
+  text-align: initial;
+  margin: 10px 5px;
+}
+textarea:focus{
+  outline: none;
+  border-color: #FF7F50;
+}
+select:focus {
+  outline: none;
+  border-color: #FF7F50;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+input:focus {
+  outline: none;
+  border-color: #FF7F50;
+} */
