--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,37 @@
 .App {
-  text-align: center;
-}
+  /* text-align: center; */
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:1rem;
+  width:100%;
+  height:100%;
 
+}
+.App > form.App{
+  width:20rem;
+  box-shadow: .1rem .2rem .1rem grey;
+  height:100%;
+  background-color: lightgrey;
+}
+.App > label {
+  font-family: 'Ubuntu';
+  border-radius:30%;
+  border-bottom-left-radius: 2% black;
+  padding:.1rem;
+  margin:.2rem;
+}
+.App > input{
+  box-shadow: .3rem .2rem .1rem grey;
+  padding:.1rem;
+  margin:.2rem;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
