--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,141 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+button{
+width:7em;
+padding-top: .5em;
+padding-bottom: .5em;
+border: none;
+}
+
+h2{
+  font-size: 40px;
+}
+h3{
+  font-size: 15px;
+}
+img{
+  width: 100%;
+  height: 20em;
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  margin: 2em 5em 2em 5em;
+}
+select{
+  margin-left: 5em;
+  width: 15em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+
+}
+
+.error{
+  color: red;
+  font-size: 15px;
+}
+.green{
+  background-color: lightgreen;
+  font-size: 20px;
+  padding: .5em 2em .5em 2em;
+}
+.instruct{
+  margin-left: 5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  width: 20em;
+  height: 5em;
+}
+.name{
+  margin-left: 5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  width: 20em;
+}
+.radio{
+  margin-left: 5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+}
+.right{
+  margin-left: 5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#hero{
+  background-color: lightgreen;
+  width: 100%;
+  height: 20em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#homeButt{
+  background-color: black;
+  color: white;
+}
+#logo{
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: red;
+}
+#subButt{
+  margin-left: 5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
 }
