--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,46 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60");
+  background-size: cover;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+
+}
+
+div{
+  text-align: center;
+}
+
+a{
+  text-decoration: none;
+  margin: 2%;
+  color: white;
+}
+
+h1{
+  color: white;
+}
+
+form{
+  margin: 2%;
+}
+
+label{
+  color: white;
+  margin: 2%;
+}
+
+button{
+  width: 25%;
+  margin: 0 auto;
 }
