--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 h2{
-  color:rgb(0, 0, 0);
+  color:black;
   font-size: 3rem;
   padding-bottom:3% ;
 }
@@ -77,7 +77,7 @@ font-size: 1.5rem;
 }
 
 .App-logo {
-  height: 10vmin;
+  height: 5vmin;
   pointer-events: none;
 
 }
@@ -148,4 +148,80 @@ nav{
 .right{
   background-color: black;
   color:white;
+}
+@media(max-width:750px){
+ 
+
+}
+
+
+@media(max-width:500px){
+nav{
+  display:flex;
+  width:45%;
+  justify-content: space-around;
+  align-items: center;
+ 
+}
+.App-link {
+  width:45%;
+  color: #61dafb;
+}
+h2{
+  color:black;
+  font-size: 2rem;
+  padding-bottom:3% ;
+}
+
+.head{
+  margin-top: 20%;
+  width: 100%;
+}
+
+header{
+  display:flex;
+  width: 100%;
+  justify-content: space-between;
+ padding: 2%;
+ height: 15vh;
+}
+
+button{
+  width:45%;
+display:flex;
+justify-content:center;
+margin:auto;
+margin-top: 5%;
+padding:1.5%;
+border-radius: 10px;
+border:2px solid black;
+background-color: #61dafb;
+color:black;
+font-weight: 700;
+font-size: 1.5rem;
+}
+button:hover{
+  border:1px solid white;
+}
+
+label{
+  width:100%;
+  display:flex;
+  justify-content: space-evenly;
+  margin:auto;
+  padding:1%;
+  background-color: rgba(255, 99, 71, 0.842);
+  margin-top: 1%;
+  border:1px solid black;
+}
+
+.notify{
+  font-size: 3rem;
+  border:3px solid black;
+  border-radius:0 50px;
+  background-image: linear-gradient(rgba(0, 128, 0, 0.397), rgba(255, 255, 255, 0.664));
+}
+
+
+
 }
