--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+/*"Lambda Eats font:*/
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+  background-color: darkred;
+  padding: 1rem;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header h1 {
+  font-family: 'Comic Neue', cursive;
+}
+header .home {
+  color: white;
+}
+footer {
+  background-color: darkred;
+  padding: 1rem;
+  color: white;
+  display: flex;
+  justify-content: space-between;
 }
