--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /*"Lambda Eats font:*/
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -13,10 +13,16 @@ header {
   align-items: center;
 }
 header h1 {
-  font-family: 'Comic Neue', cursive;
+  font-family: "Comic Neue", cursive;
 }
-header .home {
+header .homeButton {
+  background-color: black;
   color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 10px;
+  padding: 12px;
+  cursor: pointer;
 }
 footer {
   background-color: darkred;
@@ -24,4 +30,74 @@ footer {
   color: white;
   display: flex;
   justify-content: space-between;
+}
+.formZaPage h2 {
+  text-align: center;
+}
+.pizzaImg {
+  object-fit: cover;
+  width: 100%;
+  height: 14rem;
+}
+.formZa {
+  background-color: lightgray;
+  margin: 2rem;
+  padding: 1rem;
+  line-height: 2;
+}
+.formZa hr {
+  background-color: darkred;
+}
+.formZa h2 {
+  margin: 0;
+  padding-bottom: 0.3rem;
+}
+.formZa label {
+  background-color: lightgray;
+  display: block;
+  font-size: 1.2rem;
+}
+.formZa .formHelp {
+  font-size: 0.6rem;
+  display: block;
+  background-color: lightgray;
+  color: #2f4f4f;
+}
+.formZa input {
+  display: block;
+}
+.sauces label {
+  display: inline;
+  font-size: 1rem;
+  padding: 0 1rem 0 0;
+}
+.sauces input {
+  display: inline;
+}
+.toppings {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.toppings label {
+  display: inline;
+  font-size: 1rem;
+  padding: 0 1rem 0 0;
+  width: 45%;
+}
+.toppings input {
+  display: inline;
+}
+.formZa .labelOption {
+  display: inline;
+  font-size: 1rem;
+  padding: 0 1rem 0 0;
+}
+.formZa .inputOption {
+  display: inline;
+}
+.formZa textarea {
+  display: block;
+  width: 60%;
 }
