Realized the Gluten Free option should be a toggle. Additional Constant make on FormZa.js to be completed once MVP complete.

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,11 @@ footer {
   display: block;
   width: 60%;
 }
+.toggle-switch-checkbox {
+  display: inline;
+}
+.toggleLabel {
+  display: inline;
+  font-size: 1rem;
+  padding: 0 1rem 0 0;
+}
