--- a/pizza-maker/src/OrderPage/OrderPage.css
+++ b/pizza-maker/src/OrderPage/OrderPage.css
@@ -1,12 +1,13 @@
 h1 {
     font-family: 'Nunito', sans-serif;
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 .wrapper {
     width: 100%;
-    height: auto;
+    height: 100%;
     margin: 0 auto;
+    background-color: white;
 }
 
 .formWrapper {
