--- a/src/App.css
+++ b/src/App.css
@@ -6,78 +6,79 @@
   border: 0;
 }
 
-.link{
+.link {
   text-decoration: none;
-  padding:3%;
-  
+  padding: 3%;
+
 }
 
-h2{
-  color:black;
+h2 {
+  color: black;
   font-size: 3rem;
-  padding-bottom:3% ;
+  padding-bottom: 3%;
 }
 
-.bg-img{
+.bg-img {
   background-attachment: fixed;
   background-image: url('../src/Assets/Pizza.jpg');
   height: 75vh;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
 }
-.head{
+
+.head {
   width: 50%;
   display: flex;
   flex-direction: column;
-  padding:15% 0;
-  margin:auto;
-  
+  padding: 15% 0;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.411);
 }
 
-label{
-  width:45%;
-  display:flex;
+label {
+  width: 45%;
+  display: flex;
   justify-content: space-evenly;
-  margin:auto;
-  padding:1%;
+  margin: auto;
+  padding: 1%;
   background-color: rgba(255, 99, 71, 0.842);
-  
-  border:1px solid black;
+
+  border: 1px solid black;
 }
 
-button{
-  width:20%;
-display:flex;
-justify-content:center;
-margin:auto;
-margin-top: 5%;
-padding:1.5%;
-border-radius: 10px;
-border:2px solid black;
-background-color: #61dafb;
-color:black;
-font-weight: 700;
-font-size: 1.5rem;
+button {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 5%;
+  padding: 1.5%;
+  border-radius: 10px;
+  border: 2px solid black;
+  background-color: #61dafb;
+  color: black;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
-.order{
+.order {
   width: 65%;
-  display:flex;
+  display: flex;
   justify-content: space-evenly;
   flex-direction: column;
   padding: 3%;
-  margin:auto;
- 
+  margin: auto;
+
 }
 
-.notify{
-  width:85%;
+.notify {
+  width: 85%;
   font-size: 3rem;
-  border:3px solid black;
-  border-radius:0 50px;
+  border: 3px solid black;
+  border-radius: 0 50px;
   margin-top: 5%;
-  background-image: linear-gradient(rgba(0, 128, 0, 0.397), rgba(255, 255, 255, 0.664));
+  background-image: linear-gradient(rgba(128, 0, 0, 0.397), rgba(255, 255, 255, 0.664));
 }
 
 .App {
@@ -105,8 +106,8 @@ font-size: 1.5rem;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color:black;
-  
+  color: black;
+
 }
 
 .App-link {
@@ -115,141 +116,148 @@ font-size: 1.5rem;
 
 @keyframes slidein {
   from {
-    margin-left:100%;
+    margin-left: 100%;
   }
-  75%{
+
+  75% {
     font-size: 150%;
     margin-left: 25%;
     width: 150%;
   }
+
   to {
     margin-left: 0%;
     width: 35%;
   }
 }
 
-header{
-  display:flex;
+header {
+  display: flex;
   width: 100%;
   justify-content: space-between;
- padding: 1.5%;
- height: 5vh;
- 
+  padding: 1.5%;
+  height: 5vh;
+
 }
 
-h1{
-  color:crimson;
+h1 {
+  color: crimson;
 }
 
-nav{
-  display:flex;
-  width:15%;
+nav {
+  display: flex;
+  width: 15%;
   justify-content: space-around;
   align-items: center;
- 
+
 }
 
-.links{
-  width:50%;
-  border:2px solid black;
+.links {
+  width: 50%;
+  border: 2px solid black;
   padding: 2%;
   text-decoration: none;
 }
-.right{
+
+.right {
   background-color: black;
-  color:white;
+  color: white;
 }
-@media(max-width:800px){
-  header{
-    display:flex;
+
+@media(max-width:800px) {
+  header {
+    display: flex;
     width: 100%;
     justify-content: space-between;
-   padding: 2%;
-   height: 10vh;
+    padding: 2%;
+    height: 10vh;
   }
 
-  label{
-    width:100%;
-    display:flex;
+  label {
+    width: 100%;
+    display: flex;
     justify-content: space-evenly;
-    margin:auto;
-    padding:1%;
+    margin: auto;
+    padding: 1%;
     background-color: rgba(255, 99, 71, 0.842);
     margin-top: 1%;
-    border:1px solid black;
+    border: 1px solid black;
   }
 
 }
 
 
-@media(max-width:500px){
-nav{
-  display:flex;
-  width:45%;
-  justify-content: space-around;
-  align-items: center;
- 
-}
-.App-link {
-  width:45%;
-  color: #61dafb;
-}
-h2{
-  color:black;
-  font-size: 2rem;
-  padding-bottom:3% ;
-}
+@media(max-width:500px) {
+  nav {
+    display: flex;
+    width: 45%;
+    justify-content: space-around;
+    align-items: center;
 
-.head{
-  margin-top: 20%;
-  width: 100%;
-}
+  }
 
-header{
-  display:flex;
-  width: 100%;
-  justify-content: space-between;
- padding: 2%;
- height: 15vh;
-}
+  .App-link {
+    width: 45%;
+    color: #61dafb;
+  }
 
-button{
-  width:45%;
-display:flex;
-justify-content:center;
-margin:auto;
-margin-top: 5%;
-padding:1.5%;
-border-radius: 10px;
-border:2px solid black;
-background-color: #61dafb;
-color:black;
-font-weight: 700;
-font-size: 1.5rem;
-}
-button:hover{
-  border:1px solid white;
-}
+  h2 {
+    color: black;
+    font-size: 2rem;
+    padding-bottom: 3%;
+  }
 
-label{
-  width:100%;
-  display:flex;
-  justify-content: space-evenly;
-  margin:auto;
-  padding:1%;
-  background-color: rgba(255, 99, 71, 0.842);
-  margin-top: 1%;
-  border:1px solid black;
-}
+  .head {
+    margin-top: 20%;
+    width: 100%;
+  }
+
+  header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 2%;
+    height: 15vh;
+  }
+
+  button {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 5%;
+    padding: 1.5%;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: #61dafb;
+    color: black;
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
+
+  button:hover {
+    border: 1px solid white;
+  }
+
+  label {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin: auto;
+    padding: 1%;
+    background-color: rgba(255, 99, 71, 0.842);
+    margin-top: 1%;
+    border: 1px solid black;
+  }
 
 
-.notify{
-  width:85%;
-  font-size: 3rem;
-  border:3px solid black;
-  border-radius:0 50px;
-  background-image: linear-gradient(rgba(0, 128, 0, 0.397), rgba(255, 255, 255, 0.664));
-}
+  .notify {
+    width: 85%;
+    font-size: 3rem;
+    border: 3px solid black;
+    border-radius: 0 50px;
+    background-image: linear-gradient(rgba(0, 128, 0, 0.397), rgba(255, 255, 255, 0.664));
+  }
 
 
 
