--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ a:hover {
   min-width: 60%;
 }
 
+.image-sizer {
+  max-width: 100%;
+  max-height: 100%
+}
+
 .head{
   background-image: url(./resources/neonpizza.jpg);
   background-position: center;
@@ -45,6 +50,11 @@ a:hover {
 body {
   background-color: black;
   color: white;
+}
+
+footer {
+  text-align: center;
+  padding: 3rem
 }
 
 .choices {
