all form requirements done

--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,10 @@ footer {
   border-radius: 10px;
 }
 
+.error {
+  color: red;
+}
+
 @keyframes glowing {
   0% {
     background-position: 0 0;
