--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@ font-size: 25px;
 
 }
 
+.home-style {
+text-align: center;
+width: 100%;
+height: 80vh;
+display: flex;
+align-items: center;
+flex-direction: column;
+justify-content: center;
+
+}
+
 .home-style img {
 height: 500px;
 width: 40%;
@@ -56,8 +67,9 @@ width: 49.5%;
 display: flex;
 text-align: center;
 margin: 0 auto;
+
 flex-direction: column;
-height: 800px;
+height: 100vh;
 justify-content: space-evenly;
 
 }
@@ -146,10 +158,10 @@ flex-direction: column;
 }
 
 img {
-display: flex;
-height: 300px;
-width: 50%;
-margin: 0 auto;
+
+height: 600px;
+width: 100%;
+
 
 
 }
