computer crashed need more time

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
+  text-align: center;
+  font-size: 20px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  background-color: red;
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +42,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+.h1{
+  justify-content: center;
+}
+.bones{
+  background-color: red;
+  justify-content: center;
+}
+.pizzaForm{
+  background-color:red;
+  flex-direction: column;
+  justify-content: center;
+  
 }
