--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color:goldenrod;
+ font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin:0;
+  padding:0;
+  background: linear-gradient(
+    45deg,
+    rgb(134, 134, 134) 0%,
+    rgb(2, 2, 2) 100%
+  );
+
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+  background-color:rgb(0, 0, 0);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+select{
+  text-shadow:black 3px 1px;
+  background-color:rgb(0, 0, 0);
+}
+
+/* header styles */
+h1{
+  font-family: 'Fredericka the Great', cursive;
+  text-align:center;
+  font-size: 500%;
+  color:rgb(165, 1, 1);
+  text-shadow:rgb(0, 0, 0) 5px 3px;
+}
+
+h5{
+  font-size:3em;
+  text-align:center;
+  font-family: 'Fredericka the Great', cursive;
+  text-shadow: 3px 4px  black;
+}
+
+.pizza-app{
+  margin: 3% 20%;
+  padding:3% 2% ;
+  flex-direction:column;
+  border: 3px solid black;
+  border-radius:10px;
+  box-shadow:goldenrod 3px 6px;
+  font-family: 'Varela', sans-serif;
+  color:goldenrod;
+  background: linear-gradient(
+    90deg,
+    rgb(39, 31, 31) 0%,
+    rgb(117, 110, 110) 100%
+  );
+}
+
+img{
+  max-width: 100%;
+  border: 3px solid black;
+  box-shadow:rgb(0, 0, 0) 4px 2px;
+  border-radius:10px;
+}
+
+label{
+margin:2%;
+padding:.7%;
+border: 3px solid rgba(2, 2, 2, 0.486);
+box-shadow:rgb(0, 0, 0) 3px 2px;
+border-radius:6px;
+display:flex;
+flex-wrap:nowrap;
+font-size:.7rem;
+}
+
+.checks{
+
+  padding: 2%; 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap:wrap;
+}
+h2{
+  margin:2%;
+  margin-bottom:0%;
+  background-color:rgb(0, 0, 0);
+  border: 2px solid black;
+  box-shadow:rgb(51, 49, 49) 4px 3px;
+  border-radius:7px 7px 0px 0px;
 }
 
-.App-link {
-  color: #61dafb;
+h4{
+  margin: 2%;
+  margin-bottom:1%;
+  margin-top:0%;
+  background-color:rgb(0, 0, 0);
+  border: 2px solid black;
+  box-shadow:rgb(51, 49, 49) 4px 3px;
+  border-radius:0px 0px 7px 7px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+textArea{
+  margin:2%;
+  background-color:black;
+  color:goldenrod;
+  border: 1px solid black;
+  box-shadow:black 2px 3px;
+  border-radius:7px;
 }
+
+button{
+  border: 1px solid black;
+  box-shadow:black 2px 3px;
+  color:black; 
+  border-radius:7px;
+  padding:.5% .9%;
+  display: flex;
+  justify-content:center;
+  margin:20px;
+    background: linear-gradient(
+    90deg,
+    rgb(251, 181, 68) 0%,
+    rgb(180, 119, 5) 100%
+  );
+
+}
+
+.navBar{
+  display:flex;
+  justify-content: flex-end;
+
+}
+
+.link{
+  border:  2px solid black; 
+  box-shadow:black 2px 3px;
+  background-color:rgb(17, 16, 14);
+  border-radius:10px;
+  margin: .5%;
+  padding:.6%;
+  color:black;
+  display:flex;
+  justify-content:center;
+  background: linear-gradient(
+    90deg,
+    rgb(32, 25, 25) 0%,
+    rgb(2, 1, 1) 100%
+  );
+
+}
+
+.linkA{
+  border:  2px solid black; 
+  box-shadow:black 2px 3px;
+  border-radius:10px;
+  margin: .5%;
+  padding:.4%;
+  color:black;
+  background: linear-gradient(
+    90deg,
+    rgb(3, 3, 3) 0%,
+    rgb(133, 100, 40) 100%
+  );
+
+}
+
+.linkB{
+  border: 2px solid black; 
+  box-shadow:black 2px 3px;
+  border-radius:10px;
+  margin: .5%;
+  padding:.4%;
+  background: linear-gradient(
+    90deg,
+    rgb(3, 3, 3) 0%,
+    rgb(133, 100, 40) 100%
+  );
+}
+
+/* form styles */
+form{
+ border: 2px solid black; 
+ border-radius:10px;
+ box-shadow:rgb(0, 0, 0) 4px 2px;
+
+} 
