--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,19 +16,47 @@
 }
 
 .App-header {
+  display: flex;
+  font-size: calc(10px + 2vmin);
+  border:white solid 1%;
+  justify-content: space-between;
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+
+
+  
 }
+
+
+a {
+ 
+  max-width: 5%;
+  
+}
+.button {
+  text-decoration: none;
+  background-image: url(https://lolfilter.com/files/thumbnails/891773156841734.png); /* 16px x 16px */
+  background-color: transparent; /* make the button transparent */
+  background-repeat: no-repeat;  /* make the background image appear only once */
+  background-position: -140px -90px;  /* equivalent to 'top left' */
+  border-radius: 100%;         
+  cursor: pointer;        /* make the cursor like hovering over an <a> element */
+  height: p[];           /* make this the size of your image */
+  padding:120px;     /* make text start to the right of the image */
+  vertical-align: middle; /* align the text vertically centered */
+  padding-left: 16px;     /* make text start to the right of the image */
+  -webkit-text-stroke: 2px black;
+    color: greenyellow;
+    font-weight: bolder;
+}
+
 
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +65,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.homebox {
+  position: absolute; top: 20%; left: 20%;
+  background-color: gold;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-text-stroke: 1px black;
+    color: red;
+    font-weight: bolder;
+    border-radius: 100%;
 }
