--- a/src/components/form.css
+++ b/src/components/form.css
@@ -1,7 +1,7 @@
-#main-div
+#pizza-form
 {
     position: absolute; top: 20%; left: 20%;
-  background-color: gold;
+  background-color:#1f2329;
   border: none;
   color: white;
   padding: 20px;
@@ -9,7 +9,8 @@
   text-decoration: none;
   display: inline-block;
   -webkit-text-stroke: 1px black;
-    color: red;
+    color: skyblue;
+    font-size: 1.5rem;
     font-weight: bolder;
     border-radius: 100%;
 }
