--- a/src/components/form.css
+++ b/src/components/form.css
@@ -1,6 +1,6 @@
 #pizza-form
-{
-    position: absolute; top: 20%; left: 20%;
+{display: flex;
+    position: absolute; top: 20%; left: 27%;
   background-color:#1f2329;
   border: none;
   color: white;
@@ -13,4 +13,5 @@
     font-size: 1.5rem;
     font-weight: bolder;
     border-radius: 100%;
+    height: fit-content;
 }
